step 4/5 & fix scrollbar

--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ html, body {
 .gridStyle {
     border: 1px solid rgb(212,212,212);
     width: 100%; 
-    height: 1200px;
-    min-height: 100%;
+    overflow: hidden;
 }
 
 .ngTopPanel {
@@ -17,7 +16,7 @@ html, body {
 .ngCell  {
   display : table-cell;
   height: auto !important;
-  overflow:visible;
+  overflow: hidden;
   position: static;
 }
 
@@ -30,7 +29,7 @@ html, body {
 .ngCellText{
   height: auto !important;
   white-space: normal;
-  overflow:visible;
+  overflow:hidden;
 }
 
 .ngGrid.unselectable {
